Cifar10 export for evaluation

--- a/notebooks/finetune_demo.ipynb
+++ b/notebooks/finetune_demo.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -85,10 +85,10 @@
     "from src.modules.nn_utils import *\n",
     "\n",
     "\n",
-    "from src.modules import dataset\n",
+    "from src.modules import dataset as ds\n",
     "from importlib import reload\n",
-    "reload(dataset)\n",
-    "from src.modules import dataset\n",
+    "reload(ds)\n",
+    "from src.modules import dataset as ds\n",
     "from src.modules.dataset import *\n"
    ]
   },
@@ -114,16 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "DATASET_ROOT = '../dataset/cifar10/imgs/'\n",
+    "csv_path = '../dataset/cifar10/features_v4.csv'\n",
+    "pickled_features_path = '../dataset/cifar10/features_resnet50_pickle'\n",
+    "pickled_pca_features_path = '../dataset/mozgalo_dataset/features_v4_pca_pickle'\n",
+    "init_logging()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -133,14 +139,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-05-17 01:57:29 DEBUG    Loading imgs in dataset\n"
+      "2017-05-17 07:53:57 DEBUG    Loading imgs in dataset\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6889/6889 [00:05<00:00, 1338.54it/s]\n"
+      "100%|██████████| 45001/45001 [00:07<00:00, 6316.49it/s] \n"
      ]
     }
    ],
@@ -162,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Loading network\n",
-    "model = Resnet50()\n",
+    "model = InceptionNet()\n",
     "model.create_graph()"
    ]
   },
@@ -192,53 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 952/6889 [07:17<1:03:13,  1.56it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017-05-17 02:04:54 DEBUG    STREAM b'IHDR' 16 13\n",
-      "2017-05-17 02:04:54 DEBUG    STREAM b'gAMA' 41 4\n",
-      "2017-05-17 02:04:54 DEBUG    STREAM b'sRGB' 57 1\n",
-      "2017-05-17 02:04:54 DEBUG    b'sRGB' 57 1 (unknown)\n",
-      "2017-05-17 02:04:54 DEBUG    STREAM b'cHRM' 70 32\n",
-      "2017-05-17 02:04:54 DEBUG    b'cHRM' 70 32 (unknown)\n",
-      "2017-05-17 02:04:54 DEBUG    STREAM b'bKGD' 114 6\n",
-      "2017-05-17 02:04:54 DEBUG    b'bKGD' 114 6 (unknown)\n",
-      "2017-05-17 02:04:54 DEBUG    STREAM b'pHYs' 132 9\n",
-      "2017-05-17 02:04:54 DEBUG    STREAM b'IDAT' 153 32768\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 1269/6889 [10:39<1:05:03,  1.44it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017-05-17 02:08:16 DEBUG    STREAM b'IHDR' 16 13\n",
-      "2017-05-17 02:08:16 DEBUG    STREAM b'gAMA' 41 4\n",
-      "2017-05-17 02:08:16 DEBUG    STREAM b'sRGB' 57 1\n",
-      "2017-05-17 02:08:16 DEBUG    b'sRGB' 57 1 (unknown)\n",
-      "2017-05-17 02:08:16 DEBUG    STREAM b'cHRM' 70 32\n",
-      "2017-05-17 02:08:16 DEBUG    b'cHRM' 70 32 (unknown)\n",
-      "2017-05-17 02:08:16 DEBUG    STREAM b'bKGD' 114 6\n",
-      "2017-05-17 02:08:16 DEBUG    b'bKGD' 114 6 (unknown)\n",
-      "2017-05-17 02:08:16 DEBUG    STREAM b'pHYs' 132 9\n",
-      "2017-05-17 02:08:16 DEBUG    STREAM b'IDAT' 153 32768\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 29%|██▉       | 2031/6889 [18:44<51:21,  1.58it/s]"
+      "  1%|          | 287/45001 [01:23<5:02:16,  2.47it/s]"
      ]
     }
    ],
@@ -246,7 +206,7 @@
     "# slow on cpu: cca 1-2h for 7k images\n",
     "# TODO: speedup: load in batches\n",
     "dataset.extract_features(model)\n",
-    "dataset.store_csv_features(csv_path)\n",
+    "#dataset.store_csv_features(csv_path)\n",
     "dataset.store_features(pickled_features_path)\n"
    ]
   },
@@ -286,6 +246,24 @@
    "source": [
     "# Data stored in dataset object"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
